@@ -126,8 +126,8 @@
       </tr>
       <tr>
         <td>stable</td>
-        <td>2.14-1</td>
-        <td>2018-10-19</td>
+        <td>2.15-1</td>
+        <td>2020-02-21</td>
       </tr>
       <tr>
         <td>developpement</td>
@@ -143,7 +143,7 @@
       <a href="mailto:gerbier@users.sourceforge.net">Eric Gerbier</a>
     </address><br />
     merci à <a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=57523" width="88" height="31" alt="SourceForge Logo" /></a> pour son hébergement<br />
-    page changed on 2018-10-19<br />
+    page changed on 2020-02-21<br />
     <p><a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a></p>
   </div>
 </body>
